--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
     background-image: url("https://livestorm.imgix.net/1127/1642690942-funny_001.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    height: calc(100vh - 16px);
+    margin: 0;
+    padding-top: 16px;
 
 }
 
@@ -15,6 +18,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
   margin: 0 auto;
+  
  
 }
 
